--- a/src/main/webapp/default.css
+++ b/src/main/webapp/default.css
@@ -10,10 +10,11 @@ h1 {
     font-family: Verdana;
     text-align: left;
     text-transform: uppercase;
-    font-size: 25px;
+    font-size: 23px;
     font-weight: normal;    
     color:#424242 !important;
     margin-left: 5px;
+    margin-bottom:5px;
 }
 
 h2 {
@@ -132,7 +133,7 @@ a:visited {
 
 .language_icon{
     float: right;
-    margin-top: -50px; 
+    margin-top: -50px;    
 }
 
 .popis {
@@ -215,8 +216,8 @@ ul {
 /* style for preview */
 .graf{    
     margin-left:60px;
-    margin-top:3px;
-    width: 230px; 
+    margin-top:4px;
+    width: 220px; 
 
 }
 
@@ -234,6 +235,7 @@ ul {
     background-color:white;    
     padding:10px;
     margin-top:-10px;
+    overflow: auto;
 }
 .right_column{   
     margin:5px;
@@ -304,7 +306,7 @@ ul {
     width: 760px;
     margin-left: 5px;
     display: table;
-    font-family: Arial;
+    font-family: Myriad Pro;
     font-size: 14px;
     background-color: #AFD472;
 
@@ -319,16 +321,29 @@ ul {
     vertical-align: middle;
     text-align: center;
     padding-top:15px;
-    padding-bottom:15px;
+    padding-bottom:5px;
+    line-height: 30px;
 }
 .vzor{
     word-spacing: 5px;
     -moz-columns:2;
     -webkit-columns:2;
     columns:2;
-    margin-top: -5px;
-    margin-left: 70px;
-    width:350px;
+    margin-top: 5px;
+    margin-left: 35px;
+    width:345px;
+
+    -webkit-column-rule: 2px solid white; /* Chrome, Safari, Opera */
+    -moz-column-rule: 2px solid white; /* Firefox */
+    column-rule: 2px solid white;
+    border-left: 2px solid white;
+    border-right: 2px solid white;
+    padding-left: 5px;
+
+}
+.vzor a{
+    color: #605D55 !important;    
+
 }
 .link{
     /* width: 635px !important;*/
@@ -337,7 +352,24 @@ ul {
     padding-right: 3px;  
     height:25px;
 }
+
+::-webkit-input-placeholder {
+    color: #605D55;
+}
+
+:-moz-placeholder { /* Firefox 18- */
+    color: #605D55; 
+}
+
+::-moz-placeholder {  /* Firefox 19+ */
+    color: #605D55;  
+}
+
+:-ms-input-placeholder {  
+    color: #605D55; 
+}
 .smaller{
+    font-family: Myriad Pro;
     font-size: small;
 }
 .containerThreeColumn {
@@ -345,10 +377,18 @@ ul {
     background-color: #AFD472;
     display: table;
     width: 740px;
-    height:250px;
+    height:230px;
     margin-right: 5px;
     margin-bottom: 5px;
     padding:10px;
+    padding-top:20px;
+}
+.containerThreeColumn ul{
+    margin-left: -20px;
+}
+.containerThreeColumn strong{
+    margin-top: 10px;
+    margin-left: 10px;
 }
 .containerThreeColumnBlack {  
     color:white;
@@ -383,11 +423,12 @@ ul {
     background-image:url(images/design/save.png);
     background-position: center center;
     background-repeat: no-repeat;
-    height:64px;
-    width:64px;
+    height:36px;
+    width:36px;
     background-color: transparent;
     border: none;
-    margin-right: 75px;
+    margin-right: 67px;
+    margin-top: 5px;
 }
 
 .containerHalfBlack {
@@ -420,24 +461,32 @@ ul {
     width: 730px;
     background-color: #AFD472; 
     color:#605D55;
-    margin-top:15px;
-    margin-bottom: 5px;
+    margin-top:5px;
+    margin-bottom: 15px;
     padding-bottom: 5px;
 }
 .outputTable table {
     margin-top:10px;
+    width: 96%;
 }
 .outputTable table tr {  
     height:24px;
 }
+.outputTable table tr td {  
+    padding-left: 25px;
+}
 .outputTable table thead{  
     font-weight: bold;
+    color:black;
 }
 .outputTable table tr:nth-child(even) td a{
     color:#605D55 !important;
+    font-size: 13px;
+
 }
 .outputTable table tr:nth-child(odd) td a{
     color:#7e5ba6 !important;
+    font-size: 13px;
 }
 .outputHeading {
     width: 700px;
@@ -446,4 +495,45 @@ ul {
     font-weight: bold;
     font-size: 16px;
     padding:15px;
+}
+.black{
+    color:black;
+}
+.containerThreeColumnAuthor {
+    color: #605D55;
+    background-color: #AFD472;
+    display: table;
+    width: 760px;
+    height:250px;
+    margin-left: -1px;
+}
+.containerAuthorLeft{    
+    border: 4px solid #605D55;
+    margin-right: 5px;
+    width:159px;
+    height:193px;
+    float:left;
+    margin-left: 95px;
+    margin-top:40px;
+    margin-bottom: 40px;
+}
+.containerAuthorRight{
+    border: 4px solid #605D55;
+    margin-right: 5px;
+    float:left;
+    height:153px;
+    width:350px;
+    background-color: white;
+    padding:20px;
+    margin-top:40px;
+    line-height: 37px;
+    color:#605D55;
+    font-size: 16px;
+}
+.containerAuthorRight a{
+    color:#605D55;
+}
+.containerAuthorRight img{
+    width: 25px;height: 25px; margin-bottom: -0.25em;
+    margin-right: 5px;
 }
